Blackpurl/src/objects/Widget__c.object
<CustomObject>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <label>Order Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Widget_Name__c</fullName>
        <label>Widget Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Widget</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Widget_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>W-{00000}</displayFormat>
        <label>Widget Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Widgets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>